src/main/kotlin/com/example/kotlinapitemplate/error/ErrorResponse.kt
package com.example.kotlinapitemplate.error

data class ErrorResponse(
    val code: Int,
    val message: String
)
